# 381706-1_Soboleva_labs

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  report hashtable.docx  report matrix+vector.docx  report plex.docx  report queue.docx  report sorttable.docx  report table.docx  report treetable.docx
HashTab/: CMakeLists.txt  mainHashTab.cpp
HashTabLib/: CMakeLists.txt  HashTabLib.cpp  HashTabLib.h  THElemLib.h
HashTabTest/: CMakeLists.txt  test_hashtab.cpp
List/: CMakeLists.txt  mainList.cpp
ListLib/: ElemLib.h  ListLib.cpp  ListLib.h
ListMas/: CMakeLists.txt
ListMasLib/: CMakeLists.txt  ListMasLib.cpp  ListMasLib.h
MStack/: CMakeLists.txt  mainMStack.cpp
MStackLib/: CMakeLists.txt  MStackLib.h  NewStackLib.h
Matrix/: CMakeLists.txt  mainMatrix.cpp
MatrixLib/: CMakeLists.txt  MatrixLib.cpp  MatrixLib.h
ObrPol/: CMakeLists.txt  mainObrPol.cpp
ObrPolLib/: CMakeLists.txt  ObrPolLib.cpp  ObrPolLib.h  StringLib.cpp  StringLib.h
PLexLib/: PlexLib.h  SectionLib.h
Plex/: CMakeLists.txt  mainPlex.cpp
PlexLib/: PlexLib.h  PointLib.h  SectionLib.h
PlexTest/: test_plex.cpp
Poly/: CMakeLists.txt
PolyLib/: CMakeLists.txt  MonoLib.cpp  MonoLib.h  PolyLib.cpp  PolyLib.h
Queue/: CMakeLists.txt
QueueLib/: QueueLib.cpp  QueueLib.h
Reports/: report list.docx  report listmas.docx  report matrix+vector.docx  report mstack.docx  report obrpol.docx  report poly.docx  report stack.docx  report stacklist.docx
SortTab/: CMakeLists.txt  mainSortTab.cpp
SortTabLib/: CMakeLists.txt  STElemLib.h  SortTabLib.cpp  SortTabLib.h
SortTabTest/: CMakeLists.txt  test_sorttab.cpp
Stack/: CMakeLists.txt
StackLib/: CMakeLists.txt  StackLib.cpp  StackLib.h
StackList/: CMakeLists.txt  mainStackList.cpp
StackListLib/: CMakeLists.txt  StackListLib.cpp  StackListLib.h
Tab/: CMakeLists.txt  mainTab.cpp
TabLib/: CMakeLists.txt  TElemLib.h  TabLib.h
TabTest/: CMakeLists.txt  test_tab.cpp
Test/: CMakeLists.txt  test_listlib.cpp  test_listmaslib.cpp  test_matrixlib.cpp  test_mstacklib.cpp  test_obrpollib.cpp  test_polylib.cpp  test_queuelib.cpp  test_stacklib.cpp  test_stacklistlib.cpp  test_vectorlib.cpp
Text/: CMakeLists.txt  mainText.cpp
TextLib/: CMakeLists.txt  ElemLib.h  ListLib.h  NodeIterLib.cpp  NodeIterLib.h  NodeLib.cpp  NodeLib.h  StackListLib.h  StringLib.cpp  StringLib.h  TextLib.cpp  TextLib.h
TextTest/: CMakeLists.txt  test_text.cpp
TreeTab/: CMakeLists.txt  mainTreeTab.cpp
TreeTabLib/: CMakeLists.txt  TElemLib.h  TTElemLib.h  TreeTabLib.cpp  TreeTabLib.h
TreeTabTest/: CMakeLists.txt  test_treetab.cpp
Vector/: CMakeLists.txt  mainVector.cpp
VectorLib/: VectorLib.cpp  VectorLib.h
VectorTest/: CMakeLists.txt  test_vectorlib.cpp
